Add docbook files for gnome-docs.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@560 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-18  Richard Hult  <richard@imendio.com>
+
+	* Add docbook files for gnome docs.
+
 2006-12-11  Richard Hult  <richard@imendio.com>
 
 	* Initial commit to svn.
