--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-07  Richard Hult  <richard@imendio.com>
+
+	* Update loudmouth.
+
 2006-12-18  Richard Hult  <richard@imendio.com>
 
 	* Update for GNOME SVN.
