--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-08  Richard Hult  <rhult@Celery.local>
+
+	* Install the perl modules in the same prefix as the rest.
+
 2007-01-07  Richard Hult  <richard@imendio.com>
 
 	* Update loudmouth.
