Fix perl variable.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@569 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-01-11  Richard Hult  <rhult@Celery.local>
 
+	* gtk-osx-build: Correct the PERL5LIB variable.
+
+2007-01-11  Richard Hult  <rhult@Celery.local>
+
 	* Makefile: Build and install install-check, clean up a bit.
 
 	* gtk-osx-build: Support install-check $HOME/bin as well.
