--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-02  Richard Hult  <richard@imendio.com>
+
+	* Correct the commit from below to get the path right, thanks to
+	"plops" on the forum.
+
 2007-02-17  Richard Hult  <richard@imendio.com>
 
 	* Get the right PERL5LIB for older versions (e.g. panther),
