Put the gnu software in a mirror.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@583 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-04-24  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-build: Put all the gnu software in a mirror at
+	people.imendio.com, should help downloading the bootstrap
+	packages, since the gnu server seems very slow or down even
+	sometimes.
+
 2007-04-20  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-build: Improve comments and add note about cloning cairo
