--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-04-27  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-build: Add USE_CAIRO_TARBALL environment variable, if
+	set, cairo will be dowloaded from a released tarball instead of
+	GIT. Useful from behind a proxy that can't access the GIT repo.
+
+2007-04-26  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-build: Add some more modules to "extra".
+
 2007-04-24  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-build: Put all the gnu software in a mirror at
