Fix up the module set.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@596 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-28  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Remove the extra modules, since they don't
+	build without a lot of manual work anyway.
+
 2007-05-17  Richard Hult  <richard@imendio.com>
 
 	* Add jhbuild stuff.
