--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-07-14  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-build: Update cairo tarball to 1.4.10.
+
+	* gtk-osx.modules: Move cairo to the 1.4.10 tarball since we don't
+	really want to depend on 1.5+pixman yet.
+
 2007-05-28  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-build: Fix hard coded prefix.
