Add lcms for gimp.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@611 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-10-15  Richard Hult  <richard@imendio.com>
 
+	* gtk-osx.modules: Add lcms and make gimp depend on it.
+
+2007-10-15  Richard Hult  <richard@imendio.com>
+
 	* jhbuildrc-gtk-osx: Update the perl path to get perl modules
 	working again.
 
