--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-16  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Update boost and try to get the inkscape build
+	working again (without success).
+
 2007-10-15  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx.modules: Add lcms and make gimp depend on it.
