--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-29  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Make gst-ffmpeg build on leopard.
+
 2007-10-17  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx.modules: Add gstreamer and friends.
