--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-04  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Add --without-x to gimp, suggestion from
+	Alberto Ruiz.
+
 2007-11-01  Richard Hult  <richard@imendio.com>
 
 	* jhbuildrc-gtk-osx: Don't set -std for C++.
