Build GTK+ without libjasper
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@622 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-03  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Build GTK+ without libjasper.
+
 2007-11-13  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-bootstrap.modules: Add gtk-doc to the meta module.
