Disable some gstreamer modules that don't make sense.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@628 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-01-09  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-random.modules: Add babl and gegl. They don't currently
+	build on anything but Linux though.
+
+	* gtk-osx-gstreamer.modules: Disable the X based plugins, and also
+	the OS X video sink since it doesn't play well with GTK+.
+
 2007-12-21  Richard Hult  <richard@imendio.com>
 
 	* jhbuildrc-gtk-osx: Fix the headerpad option so libtool doesn't
