Add binary version of webkit.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@632 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-09  Richard Hult  <richard@imendio.com>
 
+	* gtk-osx-webkit-deps.modules: Add a prebuilt binary version of
+	webkit.
+
+2008-01-09  Richard Hult  <richard@imendio.com>
+
 	* gtk-osx-random.modules: Add babl and gegl. They don't currently
 	build on anything but Linux though.
 
