Add sdk version of webkit
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@635 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-14  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-webkit-deps.modules: Add an sdk 10.4 version of the
+	prebuilt webkit binary.
+
 2008-01-09  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-webkit-deps.modules: Add a prebuilt binary version of
