Use trunk for glibmm
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@642 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-24  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-gtkmm.modules: Use trunk for glibmm, fixes build.
+
 2008-02-03  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-gstreamer.modules: Try to disable more X11 elements.
