--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-01  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Add pango module (pango-cairo-1.5) that uses
+	cairo 1.5.x with the necessary patches. Will remove again once
+	cairo 1.6 is out.
+
 2008-03-31  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx.modules: Add pixman, cairo 1.5.x and a comment about
