Put gtk+ after the cairo 1.5 pango version
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@647 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-04-01  Richard Hult  <richard@imendio.com>
 
+	* gtk-osx.modules: Build GTK+ after pango-cairo-1.5.
+
+2008-04-01  Richard Hult  <richard@imendio.com>
+
 	* gtk-osx.modules: Add pango module (pango-cairo-1.5) that uses
 	cairo 1.5.x with the necessary patches. Will remove again once
 	cairo 1.6 is out.
