Make sure to disable xlib fully for cairo build
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@648 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-01  Richard Hult  <richard@imendio.com>
 
+	* gtk-osx.modules: Make sure to disable xlib and xlib-xrender for
+	cairo.
+
+2008-04-01  Richard Hult  <richard@imendio.com>
+
 	* gtk-osx.modules: Build GTK+ after pango-cairo-1.5.
 
 2008-04-01  Richard Hult  <richard@imendio.com>
