--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-04-03  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-bootstrap.modules: Add temporary download link for jpeg
+	to get things going for now, not sure what happened to the main
+	site.
+	- Update curl to 7.18.1.
+
 2008-04-01  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-bootstrap.modules: Move gnome-doc-utils-fake before
