--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-06  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Update cairo-1.5 to the latest snapshot 1.5.18.
+
 2008-04-03  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-gstreamer.modules: Update liboil to 0.3.14 to fix build
