--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-15  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-gstreamer.modules: Use new jhbuild tricks to get rid of
+	a retarred faad package, thanks to Andy Wingo.
+
 2008-04-12  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx.modules: Update to cairo 1.6.4.
