Improve theme modules
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@660 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-19  Richard Hult  <richard@imendio.com>
 
+	* gtk-osx-themes.modules: Remove unneeded dependencies, and only
+	use "before" deps to the core and bootstrap modules.
+
+2008-04-19  Richard Hult  <richard@imendio.com>
+
 	* gtk-osx-random.modules: Use the github repo for loudmouth.
 
 2008-04-19  Richard Hult  <richard@imendio.com>
