--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-04-21  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Update cairo to a snapshot from today to fix
+	the quartz font pkgconfig file install issue that has been fixed
+	but not released yet.
+
 2008-04-19  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx-themes.modules: Remove unneeded dependencies, and only
