--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-25  Richard Hult  <richard@imendio.com>
+
+	* jhbuildrc-gtk-osx: Changes to support upcoming framework
+	creation.
+
 2008-04-21  Richard Hult  <richard@imendio.com>
 
 	* jhbuildrc-gtk-osx: Make it possible to choose a default build
