--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-01  Richard Hult  <richard@imendio.com>
+
+	* jhbuildrc-gtk-osx: Set ACLOCAL_FLAGS if necessary.
+
 2008-04-27  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx.modules: Include pango modules as builtin ones.
