--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2008-05-01  Richard Hult  <richard@imendio.com>
 
 	* jhbuildrc-gtk-osx:
+	* jhbuildrc-gtk-osx-cfw-10.4: Fix bug introduced in the
+	refactoring.
+
+2008-05-01  Richard Hult  <richard@imendio.com>
+
+	* jhbuildrc-gtk-osx:
 	* jhbuildrc-gtk-osx-fw: Split out the 10.4 SDK setup and add as a
 	function in the base rc file.
 
