--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-03  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Add patch to pixman to disable gtk tests.
+
 2008-05-01  Richard Hult  <richard@imendio.com>
 
 	* jhbuildrc-gtk-osx:
