Skip a few more modules in cfw mode, update fake packages.
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@676 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -65,6 +65,11 @@ skip.append("gst-plugins-bad")
 skip.append("gst-ffmpeg")
 skip.append("faad")
 
+# Not needed.
+#
+skip.append("waf")
+skip.append("automake-1.4")
+
 # Use libxml/libxslt from the system.
 #
 skip.append("libxml2")
