Tweak the framework setups
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@679 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-05-04  Richard Hult  <richard@imendio.com>
+
+	* jhbuildrc-gtk-osx-cfw-10.4:
+	* jhbuildrc-gtk-osx-fw-10.4: Skip pyxml and set PERL and PYTHON
+	environment variables to ensure we use the system versions instead
+	of from macports.
+
 2008-05-03  Richard Hult  <richard@imendio.com>
 
 	* jhbuildrc-gtk-osx: Only add framework paths if they exist.
