Use CPPFLAGS, not CFLAGS for includes
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@680 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-05-04  Richard Hult  <richard@imendio.com>
 
+	* jhbuildrc-gtk-osx: Set -I flags in CPPFLAGS, not CFLAGS.
+
+2008-05-04  Richard Hult  <richard@imendio.com>
+
 	* jhbuildrc-gtk-osx-cfw-10.4:
 	* jhbuildrc-gtk-osx-fw-10.4: Skip pyxml and set PERL and PYTHON
 	environment variables to ensure we use the system versions instead
