Try to fix freetype
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@687 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-05-10  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-bootstrap.modules: Change freetype to use autotools
+	modtype instead of tarball, to be able to use an autogen template
+	so we can remove the exec_prefix that freetype doesn't understand.
+
+2008-05-08  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx.modules: Update ige-mac-integration to 0.8.
+
 2008-05-06  Richard Hult  <richard@imendio.com>
 
 	* jhbuildrc-gtk-osx-cfw-10.4:
