Use unstable branches for now
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@689 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -53,9 +53,10 @@ repo = repos.get("svn.gnome.org", "http://svn.gnome.org/svn")
 if repo.endswith("/"):
     repo = repo[:-1]
 
+# Use unstable branches until GTK+ 2.14 is released.
 branches["glib"] = repo + "/glib/branches/glib-2-16"
-branches["gtk+"] = repo + "/gtk+/branches/gtk-2-12"
-branches["atk"] = repo + "/atk/branches/gnome-2-22"
+#branches["gtk+"] = repo + "/gtk+/branches/gtk-2-12"
+#branches["atk"] = repo + "/atk/branches/gnome-2-22"
 #branches["pango"] = repo + "/pango/branches/pango-1-20"
 
 # Skip those for now.
