More work on getting the jhbuild more streamlined
git-svn-id: http://developer.imendio.com/svn/gtk-osx-build@691 62e0af8c-05e7-0310-8efa-89bbc38b0f4f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2008-05-13  Richard Hult  <richard@imendio.com>
+
+	* jhbuildrc-gtk-osx: Tweak the per-arch setup, in preparation for
+	universal builds...
+
+	* gtk-osx.modules: Remove the universal moduleset, it's not used
+	and fairly broken.
+
+2008-05-13  Richard Hult  <richard@imendio.com>
+
+	* gtk-osx-build-setup.sh: Disable gettext.
+	- Also don't overwrite a custom rc file if there is one.
+
 2008-05-12  Richard Hult  <richard@imendio.com>
 
 	* gtk-osx.modules: Update ige-mac-integration.
