--- a/README
+++ b/README
@@ -1,16 +1,9 @@
-The files here are used together with the build script "jhbuild" to
-build GTK+ for Mac OS X.
+This repository is used to maintain the configurations and modulesets
+for building GTK+ OS X with jhbuild.
 
-You need Mac OS X 10.4 or newer and Xcode 2.5 or newer. Make sure you
-have subversion (svn) installed, 10.5 has it by default.
+NOTE: If you want to build GTK+, you most likely don't need this
+module, follow the instructions at:
 
-Then run the script provided here:
+http://developer.imendio.com/projects/gtk-macosx/build-instructions
 
- ./gtk-osx-build-setup.sh
-
-After that has completed, do the following:
-
- jhbuild bootstrap
- jhbuild build
-
-See http://developer.imendio.com/projects/gtk-macosx for more information.
+instead.
