--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -1,6 +1,6 @@
 # -*- mode: python -*-
 #
-# Copyright (C) 2006, 2007, 2008 Imendio AB
+# Copyright (C) 2006 - 2008 Imendio AB
 #
 # Build setup for creating frameworks against the 10.4 SDK. This file
 # should normally not need any editing.
@@ -44,19 +44,15 @@ module_autogenargs["gettext"] = autogenargs + " --with-libiconv-prefix=" + sdkdi
 old_value = module_autogenargs.get('glib', autogenargs)
 module_autogenargs['glib'] = old_value + ' --with-libiconv=gnu'
 
-# Use latest stable branches for some modules. Keep any overriden repo
-# name here to keep custom usernames set up in a -custom setup.
+# Replace trunk with tags/branches for some modules.
 #
-repo = repos.get("svn.gnome.org", "http://svn.gnome.org/svn")
-if repo.endswith("/"):
-    repo = repo[:-1]
-
-# Use unstable branches until GTK+ 2.14 is released.
-#
-#branches["glib"] = repo + "/glib/branches/glib-2-16"
-#branches["gtk+"] = repo + "/gtk+/branches/gtk-2-12"
-#branches["atk"] = repo + "/atk/branches/gnome-2-22"
-#branches["pango"] = repo + "/pango/branches/pango-1-20"
+set_branch("glib", "tags/GLIB_2_17_0")
+#set_branch("gtk+", "tags/GTK_2_13_1")
+set_branch("atk", "tags/ATK_1_22_0")
+set_branch("pango", "tags/PANGO_1_21_1")
+set_branch("libglade", "tags/LIBGLADE_2_6_2")
+set_branch("gtk-engines", "tags/GTK_ENGINES_2_15_1")
+#set_branch("gnome-icon-theme", "tags/GNOME_ICON_THEME_2_23_0")
 
 # Skip those for now.
 #
@@ -81,11 +77,10 @@ skip.append("WebKit")
 
 # Not needed.
 #
-skip.append("libcurl")
-skip.append("bison")
 skip.append("waf")
 skip.append("pyxml")
 skip.append("automake-1.4")
+skip.append("automake-1.8")
 skip.append("tango-icon-theme")
 skip.append("tango-icon-theme-extras")
 
@@ -97,7 +92,3 @@ skip.append("libxslt")
 # Needed to pick up libxml2 and libxslt from the system.
 #
 addpath("PKG_CONFIG_PATH", "/usr/lib/pkgconfig")
-
-# We want the system perl and python, not from macports or so.
-os.environ["PERL"] = "/usr/bin/perl"
-os.environ["PYTHON"] = "/usr/bin/python"
