GTK+ was tagged wrongly

--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -46,7 +46,7 @@ append_autogenargs('glib', ' --with-libiconv=gnu')
 # Replace trunk with tags/branches for some modules.
 #
 set_branch("glib", "tags/GLIB_2_17_7")
-set_branch("gtk+", "tags/GTK_2_13_7")
+set_branch("gtk+", "branches/GTK_2_13_7") # Note: the tagging was done wrong
 set_branch("atk", "tags/ATK_1_23_5")
 set_branch("pango", "tags/PANGO_1_21_5")
 set_branch("libglade", "tags/LIBGLADE_2_6_2")
