--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -45,13 +45,14 @@ append_autogenargs('glib', ' --with-libiconv=gnu')
 
 # Replace trunk with tags/branches for some modules.
 #
-set_branch("glib", "tags/GLIB_2_17_7")
+set_branch("glib", "tags/GLIB_2_18_0")
 set_branch("gtk+", "branches/GTK_2_13_7") # Note: the tagging was done wrong
 set_branch("atk", "tags/ATK_1_23_5")
 set_branch("pango", "tags/PANGO_1_21_5")
 set_branch("libglade", "tags/LIBGLADE_2_6_2")
-set_branch("gtk-engines", "tags/GTK_ENGINES_2_15_3")
+set_branch("gtk-engines", "tags/GTK_ENGINES_2_15_4")
 set_branch("intltool", "tags/INTLTOOL_0_40_3")
+set_branch("gnome-icon-theme", "tags/GNOME_ICON_THEME_2_23_91")
 
 # Skip those for now.
 #
